--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,78 @@
+/* In your CSS file (e.g., styles.css or styles.scss) */
+/* In your CSS file (e.g., styles.css or styles.scss) */
+.custom-link {
+    font-size: 20px;
+    color: #007bff;
+    font-weight: bold;
+}
+
+.custom-texts {
+    font-style: italic; /* Italic font style */
+    text-decoration: underline; /* Underline text */
+    text-transform: uppercase; /* Convert text to uppercase */
+    margin-left: 10px; /* Add some left margin */
+    /* Add more styles as needed */
+}
+
+
 /* You can add global styles to this file, and also import other style files */
+.image-container {
+    width: 300px; /* Set your desired width */
+    height: 200px; /* Set your desired height */
+    border: 1px solid #ccc; /* Optional border styling */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .image {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .user-home-container {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Adjust the height as needed */
+    overflow: hidden;
+  }
+  
+  .background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.6; /* Adjust the opacity as needed */
+    z-index: -1;
+  }
+  
+  .user-content {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    padding: 200px;
+    background-color: rgba(255, 255, 255, 0.7); /* Background color with transparency */
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: 200px;
+  }
+  
+  h1 {
+    font-size: 5em;
+    color: #333;
+  }
+  .animated-text {
+    animation: bounce 1s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    30% {
+      transform: translateY(-20px);
+    }
+    60% {
+      transform: translateY(-10px);
+    }
+  }
+  
